maze.wallfollower.WallFollowerMaze.scala.error
Compilation error:
WallFollowerMaze:6: error: Boolean does not take parameters
      left()
          ^