maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
  var left = false;
  
  while(!isOverBaggle()) {
    if(isFacingWall()) {
      left()
      
      if(isFacingWall()) {
        left = true;
      }
      
      right()
    }
    else if(left == true) {
      forward()
    }
    else {
      right()
    }
  }
}